<resources>
    <string name="app_name">XmlDesign</string>
    <string name="title">My vehicle</string>
    <string name="card_view_text">Audi e-tron Sportback</string>
    <string name="km">kilometre left</string>
    <string name="percent">35%</string>
    <string name="charged">charged</string>
    <string name="nearby_chargers">Nearby Chargers</string>
    <string name="place">Netherlands, Amsterdam</string>
    <string name="change_location"><u>Change Location</u></string>
    <string name="station1">ChargePoint Station 1</string>
    <string name="street1">street pulo 25</string>
    <string name="ports">8 Ports Available</string>
    <string name="chargepoint_station_2">ChargePoint Station 2</string>
    <string name="street2">street srna 74</string>
    <string name="country">Amsterdam, Netherlands</string>
    <string name="ports2">2 Ports Available</string>
    <string name="station3">ChargePoint Station 3</string>
    <string name="street3">street adas 123 123</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level">Level 3</string>
    <string name="port_type">port type</string>
    <string name="_0_2_per_kwh">$0.2 per kwh</string>
    <string name="cost">cost</string>
    <string name="_200_a_96_kw">200 A, 96 kW</string>
    <string name="power">power</string>
    <string name="button_text">Open in Google Maps</string>
</resources>