<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChargeStation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="82dp"
        android:layout_height="6dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:src="@drawable/line"
        />

    </LinearLayout>

        <ImageView
            android:layout_width="102dp"
            android:layout_height="94dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="67dp"
            android:src="@drawable/station1" />

    <TextView
        android:id="@+id/station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/station1"
        android:textColor="@color/card_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="173dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/poppins_light_style"
            android:text="@string/street1"
            android:textAllCaps="true"
            android:textColor="@color/card_street_text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="173dp"
            android:layout_marginTop="133dp"
            android:fontFamily="@font/poppins_light_style"
            android:text="@string/country"
            android:textColor="@color/card_street_text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/number_of_ports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="163dp"
            android:fontFamily="@font/poppins_medium_style"
            android:text="@string/ports"
            android:textColor="@color/ports" />

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="265dp"
           android:layout_marginStart="39dp"
           android:layout_marginEnd="42dp"
           android:layout_marginTop="222dp"
           android:background="@drawable/shape"
           >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="88dp"
             android:layout_marginTop="26dp"
             android:text="@string/level"
             android:textStyle="bold"
             android:fontFamily="@font/outfit_regular"
             android:textSize="20sp"
             android:textColor="#D9C8FF"
             />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="88dp"
               android:layout_marginTop="54dp"
               android:text="@string/port_type"
               android:fontFamily="@font/poppins_light_style"
               android:textAllCaps="true"
               android:textSize="20sp"
               android:textColor="#FAD9C8FF"
               />

           <ImageView
               android:layout_width="22dp"
               android:layout_height="22dp"
               android:src="@drawable/bottom_img1"
               android:layout_marginTop="36dp"
               android:layout_marginStart="37dp"
               />
           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_marginTop="92dp"
               android:layout_marginStart="14dp"
               android:layout_marginEnd="15dp"
               android:background="#A1D9C8FF"
           />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="88dp"
               android:layout_marginTop="122dp"
               android:text="@string/_0_2_per_kwh"
               android:textStyle="bold"
               android:fontFamily="@font/outfit_regular"
               android:textSize="20sp"
               android:textColor="#D9C8FF"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="88dp"
               android:layout_marginTop="150dp"
               android:text="@string/cost"
               android:fontFamily="@font/poppins_light_style"
               android:textAllCaps="true"
               android:textSize="20sp"
               android:textColor="#FAD9C8FF"
               />

           <ImageView
               android:layout_width="33dp"
               android:layout_height="33dp"
               android:src="@drawable/bottom_img2"
               android:layout_marginTop="123dp"
               android:layout_marginStart="30dp"
               />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_marginTop="186dp"
               android:layout_marginStart="14dp"
               android:layout_marginEnd="15dp"
               android:background="#A1D9C8FF"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="88dp"
               android:layout_marginTop="205dp"
               android:text="@string/_200_a_96_kw"
               android:textStyle="bold"
               android:fontFamily="@font/outfit_regular"
               android:textSize="20sp"
               android:textColor="#D9C8FF"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="88dp"
               android:layout_marginTop="233dp"
               android:text="@string/power"
               android:fontFamily="@font/poppins_light_style"
               android:textAllCaps="true"
               android:textSize="20sp"
               android:textColor="#FAD9C8FF"
               />

           <ImageView
               android:layout_width="34dp"
               android:layout_height="34dp"
               android:src="@drawable/bottom_img3"
               android:layout_marginTop="204dp"
               android:layout_marginStart="30dp"
               />


       </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_google_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        app:cornerRadius="35dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="35dp"

        android:text="@string/button_text"
        android:fontFamily="@font/outfit_semibold"
        android:textAllCaps="false"
        android:textColor="#2C1363"
        android:textSize="24sp"

        />

</FrameLayout>