<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="44dp"
        android:text="@string/title"
        android:textColor="@color/text_color"
        android:fontFamily="@font/outfit_style"
        android:textSize="31sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/big_card_view"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="44dp"
        app:cardBackgroundColor="@color/card_background_color"
        app:cardCornerRadius="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/outfit_style"
            android:text="@string/card_view_text"
            android:textSize="20sp"
            android:textColor="@color/card_text_color" />

        <ImageView
            android:id="@+id/charge"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginStart="167dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="7dp"
            android:src="@drawable/car" />

        <ImageView
            android:id="@+id/battery"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="67dp"
            android:src="@drawable/battery" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="118dp"
            android:src="@drawable/charge" />

        <TextView
            android:id="@+id/charge_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="61dp"
            android:text="262"
            android:fontFamily="@font/outfit_regular"
            android:textColor="@color/card_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/number_of_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="83dp"
            android:text="@string/km"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_light_style"
            android:textColor="@color/light_card_text_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/percent_of_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="14sp"
            android:fontFamily="@font/outfit_regular"
            android:textColor="@color/card_text_color"
            android:layout_marginStart="61dp"
            android:layout_marginTop="118dp"
            />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="140dp"
            android:text="@string/charged"
            android:fontFamily="@font/poppins_light_style"
            android:textAllCaps="true"
            android:textColor="@color/light_card_text_color"
            android:textSize="10sp" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"

        android:fontFamily="@font/outfit_style"
        android:text="@string/nearby_chargers"
        android:textColor="@color/text_color"
        android:textSize="31sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light_style"
        android:text="@string/place"
        android:textColor="@color/light_card_text_color"
        android:textSize="14sp"

        />

    <TextView
        android:id="@+id/change_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular_style"
        android:text="@string/change_location"
        android:textColor="@color/link"
        android:textSize="14sp"

        />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:cardBackgroundColor="@color/card_background_color"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="29dp"
        app:cardCornerRadius="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:textSize="20sp"

        />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:cardBackgroundColor="@color/card_background_color"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="31dp"
        app:cardCornerRadius="30dp">


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:cardBackgroundColor="@color/card_background_color"
        android:layout_marginTop="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="29dp"
        app:cardCornerRadius="30dp">

    </androidx.cardview.widget.CardView>


</LinearLayout>